--- a/app/src/main/res/layout-v23/activity_main.xml
+++ b/app/src/main/res/layout-v23/activity_main.xml
@@ -68,7 +68,7 @@
 
         <Button
             android:id="@+id/buttonRegister"
-            style="@style/Widget.AppCompat.Button.Colored"
+            style="@android:style/Widget.Material.Button.Colored"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
