--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,8 @@
 <resources>
     <color name="colorPrimary">#8CC69D</color>
     <color name="colorPrimaryDark">#63A078</color>
-    <color name="colorAccent">#2ECD34</color>
+    <color name="colorAccent">#34B862</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+
 </resources>
