--- a/app/src/main/res/layout/activity_scan_sut.xml
+++ b/app/src/main/res/layout/activity_scan_sut.xml
@@ -16,7 +16,6 @@
         android:layout_margin="10dp"
         android:text="ID sensore umidità (SUT):" />
 
-
     <Button
         android:id="@+id/scanBtn"
         android:layout_width="wrap_content"
@@ -24,6 +23,6 @@
         android:layout_margin="10dp"
         android:backgroundTint="#0F9D58"
         android:layout_gravity="center"
-        android:text="Inquadra il codice QR"/>
+        android:text="Inquadra QR (SUT)"/>
 
 </LinearLayout>
