--- a/app/src/main/res/layout/activity_drag_drop.xml
+++ b/app/src/main/res/layout/activity_drag_drop.xml
@@ -7,18 +7,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/irrigation_line"
-        android:layout_width="64dp"
-        android:layout_height="350dp"
+    <FrameLayout
+        android:id="@+id/objects_container"
+        android:layout_width="253dp"
+        android:layout_height="384dp"
         android:layout_centerInParent="true"
-        android:background="@drawable/border"
-        android:orientation="vertical"
-        android:textAlignment="center"
+        android:background="@android:color/darker_gray"
         app:layout_constraintBottom_toTopOf="@+id/plant_pot_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></LinearLayout>
+        app:layout_constraintTop_toTopOf="parent">
+
+        <GridView
+            android:id="@+id/irrigation_line"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+
+    </FrameLayout>
+
 
     <ImageView
         android:id="@+id/plant_pot_icon"
@@ -29,6 +36,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/irrigation_line" />
+        app:layout_constraintTop_toBottomOf="@+id/objects_container" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
