Fixed species fetch from server and selection activity, to be fixed: logic of pots added, first vs next pot, synergy selection

--- a/app/src/main/res/layout/activity_synergy.xml
+++ b/app/src/main/res/layout/activity_synergy.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SetCropActivity">
+    tools:context=".SynergyActivity">
 
     <Spinner
-        android:id="@+id/crop_spinner"
+        android:id="@+id/syn_crop_spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -15,6 +15,5 @@
         android:minHeight="48dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
