--- a/app/src/main/res/layout/activity_grid.xml
+++ b/app/src/main/res/layout/activity_grid.xml
@@ -12,9 +12,8 @@
         android:id="@+id/textViewXplain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:layout_marginBottom="421dp"
-        android:text="Per iniziare a organizzare il tuo orto, trascina l'icona del vaso in una delle posizioni numerate. Puoi riordinare i vasi che aggiungi semplicemente trascinandoli nelle posizioni che preferisci, oppure puoi eliminarli trascinandoli nel cestino."
+        android:text="Per aggiungere un vaso all'orto, trascina l'icona del vaso nella posizione che preferisci.\nPer eliminare un vaso, trascinalo nel cestino.\nPer scambiare due vasi, trascinali uno sull'altro."
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,6 +24,7 @@
 
     <GridLayout
         android:id="@+id/grid_layout"
+        android:background="@drawable/border"
         android:layout_width="175dp"
         android:layout_height="350dp"
         android:layout_marginTop="50dp"
@@ -40,8 +40,10 @@
 
         <FrameLayout
             android:id="@+id/cell1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:background="@drawable/border"
+            android:layout_margin="2dp"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:foregroundGravity="center">
@@ -57,8 +59,10 @@
 
         <FrameLayout
             android:id="@+id/cell8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:background="@drawable/border"
+            android:layout_margin="2dp"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:foregroundGravity="center">
@@ -74,8 +78,10 @@
 
         <FrameLayout
             android:id="@+id/cell2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:background="@drawable/border"
+            android:layout_margin="2dp"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:foregroundGravity="center">
@@ -91,8 +97,10 @@
 
         <FrameLayout
             android:id="@+id/cell7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:background="@drawable/border"
+            android:layout_margin="2dp"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:foregroundGravity="center">
@@ -108,8 +116,10 @@
 
         <FrameLayout
             android:id="@+id/cell3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:background="@drawable/border"
+            android:layout_margin="2dp"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:foregroundGravity="center">
@@ -125,8 +135,10 @@
 
         <FrameLayout
             android:id="@+id/cell6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:background="@drawable/border"
+            android:layout_margin="2dp"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:foregroundGravity="center">
@@ -142,8 +154,10 @@
 
         <FrameLayout
             android:id="@+id/cell4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:background="@drawable/border"
+            android:layout_margin="2dp"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:foregroundGravity="center">
@@ -159,8 +173,10 @@
 
         <FrameLayout
             android:id="@+id/cell5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:background="@drawable/border"
+            android:layout_margin="2dp"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:foregroundGravity="center">
