--- a/app/src/main/res/layout-v23/activity_login.xml
+++ b/app/src/main/res/layout-v23/activity_login.xml
@@ -12,57 +12,53 @@
         android:id="@+id/editTextUsername"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/border"
+        android:elegantTextHeight="true"
         android:hint="Username"
         android:inputType="text"
         android:minHeight="48dp"
+        android:textAlignment="center"
+        android:textColor="@color/cardview_dark_background"
+        android:textColorHint="@color/cardview_dark_background"
+        android:textCursorDrawable="@drawable/cursor_color"
         app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
-        android:background="@drawable/border"
-        android:textCursorDrawable="@drawable/cursor_color"
-        android:textColor="@color/cardview_dark_background"
-        android:textColorHint="@color/cardview_dark_background"
-        android:textAlignment="center"
-        android:elegantTextHeight="true"
-        />
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <EditText
         android:id="@+id/editTextPassword"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/border"
+        android:elegantTextHeight="true"
         android:fontFamily="sans-serif"
         android:hint="Password"
         android:inputType="textPassword"
         android:minHeight="48dp"
+        android:textAlignment="center"
+        android:textColor="@color/cardview_dark_background"
+        android:textColorHint="@color/cardview_dark_background"
+        android:textCursorDrawable="@drawable/cursor_color"
         app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
-        android:background="@drawable/border"
-        android:textCursorDrawable="@drawable/cursor_color"
-        android:textColor="@color/cardview_dark_background"
-        android:textColorHint="@color/cardview_dark_background"
-        android:textAlignment="center"
-        android:elegantTextHeight="true"/>
+        app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />
 
     <Button
         android:id="@+id/buttonLogin"
         style="@android:style/Widget.Material.Button.Colored"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:layout_marginStart="10dp"
         android:layout_marginBottom="16dp"
-        android:text="Login"
         android:background="@drawable/filled"
+        android:text="Login"
+        android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/textViewRegister"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -73,7 +69,6 @@
         android:id="@+id/textViewRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
         android:layout_marginBottom="1dp"
         android:text="Non hai un account? Registrati"
         android:textAlignment="center"
@@ -84,6 +79,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
 
+
+    <TextView
+        android:id="@+id/textViewWelcome2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="48dp"
+        android:text="Bentornato!"
+        android:textAlignment="center"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:textSize="36dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
         android:id="@+id/progressBar"
