--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,58 +14,55 @@
         android:orientation="vertical"
         android:padding="10dp">
 
-
         <EditText
             android:id="@+id/editTextUsername"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
             android:layout_marginBottom="179dp"
+            android:background="@drawable/border"
+            android:elegantTextHeight="true"
             android:hint="Username"
-            android:inputType="text"
-            android:textAlignment="center"
 
+            android:inputType="text"
             android:minHeight="48dp"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textCursorDrawable="@drawable/cursor_color"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             tools:layout_conversion_absoluteHeight="48dp"
-            tools:layout_conversion_absoluteWidth="392dp"
-            android:background="@drawable/border"
-            android:textCursorDrawable="@drawable/cursor_color"
-            android:textColor="@color/black"
-            android:elegantTextHeight="true"/>
+            tools:layout_conversion_absoluteWidth="392dp" />
 
         <EditText
             android:id="@+id/editTextPassword"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
             android:layout_marginTop="16dp"
+            android:background="@drawable/border"
+            android:elegantTextHeight="true"
             android:fontFamily="sans-serif"
             android:hint="Password"
             android:inputType="textPassword"
-            android:textAlignment="center"
             android:minHeight="48dp"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textCursorDrawable="@drawable/cursor_color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
             tools:layout_conversion_absoluteHeight="48dp"
-            tools:layout_conversion_absoluteWidth="392dp"
-            android:background="@drawable/border"
-            android:textCursorDrawable="@drawable/cursor_color"
-            android:textColor="@color/black"
-            android:elegantTextHeight="true"/>
+            tools:layout_conversion_absoluteWidth="392dp" />
 
         <Button
             android:id="@+id/buttonLogin"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
             android:layout_marginTop="16dp"
+            android:background="@drawable/filled"
             android:gravity="center"
             android:text="Login"
             android:textAlignment="center"
@@ -73,7 +70,6 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
-            android:background="@drawable/filled"
             tools:layout_conversion_absoluteHeight="48dp"
             tools:layout_conversion_absoluteWidth="88dp" />
 
@@ -81,14 +77,12 @@
             android:id="@+id/textViewRegister"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
             android:layout_marginBottom="11dp"
             android:text="Non hai un account? Registrati"
             android:textAlignment="center"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             tools:layout_conversion_absoluteHeight="24dp"
             tools:layout_conversion_absoluteWidth="392dp" />
@@ -101,4 +95,16 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/textViewWelcome2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="47dp"
+        android:text="Bentornato!"
+        android:textAlignment="center"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:textSize="36dp" />
 </RelativeLayout>
